# couchplay

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  run-debug.sh
.github/workflows/: ci.yml  release.yml
data/: io.github.hikaps.couchplay.desktop  io.github.hikaps.couchplay.metainfo.xml
data/dbus/: couchplay-helper.service  io.github.hikaps.CouchPlayHelper.conf  io.github.hikaps.CouchPlayHelper.service
data/polkit/: io.github.hikaps.couchplay.policy
helper/: AGENTS.md  CMakeLists.txt  CouchPlayHelper.cpp  CouchPlayHelper.h  SystemOps.cpp  SystemOps.h  main.cpp
resources/: appimage.qrc
scripts/: install-helper.sh
src/: CMakeLists.txt  main.cpp
src/core/: AGENTS.md  AppImageHelper.cpp  AppImageHelper.h  AudioManager.cpp  AudioManager.h  CommandVerifier.cpp  CommandVerifier.h  DeviceManager.cpp  DeviceManager.h  GameLibrary.cpp  GameLibrary.h  GamescopeInstance.cpp  GamescopeInstance.h  HeroicConfigManager.cpp  HeroicConfigManager.h  Logging.cpp  Logging.h  MonitorManager.cpp  MonitorManager.h  PresetManager.cpp  PresetManager.h  SessionManager.cpp  SessionManager.h  SessionRunner.cpp  SessionRunner.h  SettingsManager.cpp  SettingsManager.h  SharingManager.cpp  SharingManager.h  SteamConfigManager.cpp  SteamConfigManager.h  UserManager.cpp  UserManager.h  WindowManager.cpp  WindowManager.h
src/dbus/: CouchPlayHelperClient.cpp  CouchPlayHelperClient.h
src/qml/: AGENTS.md  Main.qml
src/qml/components/: ActionCard.qml  DeviceCard.qml  GameCard.qml  InfoCard.qml  InstanceCard.qml  LayoutPreview.qml  MonitorSelector.qml  PresetSelector.qml  SelectableCard.qml
src/qml/components/dialogs/: AddPresetDialog.qml  DeletePresetDialog.qml  EditPresetDialog.qml  InstallHelperDialog.qml  ResetSettingsDialog.qml
src/qml/pages/: DeviceAssignmentPage.qml  GamesPage.qml  HomePage.qml  LayoutPage.qml  ProfilesPage.qml  SessionSetupPage.qml  SettingsPage.qml  UsersPage.qml
tests/: AGENTS.md  CMakeLists.txt  test_commandverifier.cpp  test_couchplayhelper.cpp  test_devicemanager.cpp  test_gamelibrary.cpp  test_gamescopeinstance.cpp  test_heroicconfigmanager.cpp  test_monitormanager.cpp  test_presetmanager.cpp  test_presetmanager_integration.cpp  test_scanapplications.cpp  test_sessionmanager.cpp  test_sessionrunner.cpp  test_usermanager.cpp
tests/data/: mock_devices
